# thtest

./: CMakeLists.txt  CMakePresets.json  README.md
Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: cache-v2-364b4951b86ee640b053.json  cmakeFiles-v1-e536fd0d469199304d4a.json  codemodel-v2-4cea75f9c0c362fa08f7.json  index-2026-06-11T22-45-02-0549.json  target-thtest-Debug-8f4dc286cb7757dfc08f.json  toolchains-v1-dc65618f553353dc52dd.json
include/: supertext.h  tweeny.h
src/: main.cpp
